--- a/testData.properties
+++ b/testData.properties
@@ -1,8 +1,8 @@
 baseUrl=https://yousician.com/songs
 #browser=chrome
-#browser=chrome-headless
+browser=chrome-headless
 #browser=firefox
 #browser=firefox-headless
 #browser=ie
 #browser=edge
-browser=safari
+#browser=safari
